test/files/parser/success/sources/include.organic
test = 440

func() = {
    440
}
