test/files/parser/errors/sources/include.organic
test = 0

func() = {}
